Changes to be committed: 	modified:   .gitmodules 	new file:   Projects/03_minishell 	new file:   Projects/03_philosophers 	modified:   README.md 	modified:   Subjects/en.subject.Push_Swap.pdf 	new file:   Subjects/en.subject.minishell.pdf 	new file:   Subjects/fr.subject.Philosophers.pdf
 Changes not staged for commit:
	modified:   Projects/02_fract-ol (modified content)
	modified:   Projects/02_minitalk (modified content)
	modified:   Projects/02_push_swap (modified content)

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,9 @@
 [submodule "Projects/02_push_swap"]
 	path = Projects/02_push_swap
 	url = https://github.com/NajmiAchraf/push_swap.git
+[submodule "Projects/03_philosophers"]
+	path = Projects/03_philosophers
+	url = https://github.com/NajmiAchraf/Philosophers.git
+[submodule "Projects/03_minishell"]
+	path = Projects/03_minishell
+	url = https://github.com/NajmiAchraf/minishell.git
